# student-buddy

./: Initial-Plan.md  README.md  batch.jsonl  generate_batch.py  initial_prompt.md  main_prompt.md  run.py
backend/: .env.example  .gitignore  README.md  firebase_utils.py  gemini_utils.py  llm_handler.py  main.py  orchestrator.py  pyproject.toml  requirements.txt  state_manager.py  update_instruction_in_dataset.py  updated_policy_dataset.jsonl
backend/agent_prompts/: prompts.py  schemas.py
frontend/: README.md  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: Chat.tsx  ChatInterface.tsx  Dashboard.tsx  Navbar.tsx  Onboarding.tsx  OnboardingForm.tsx  ThemeRegistry.tsx
frontend/src/lib/: api.ts
