[project]
name = "student_buddy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cryptography>=48.0.0",
    "fastapi>=0.136.1",
    "gradio>=6.14.0",
    "gradio-client>=2.5.0",
    "llama-cpp-python>=0.3.23",
    "pydantic>=2.13.4",
    "python-multipart>=0.0.28",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
